# runtime

./: CLAUDE.md
.claude/: settings.local.json
.claude/plans/: freertos-arm32-support.md  mono-platform-porting-guide.md
docs/design/: runtime-architecture-overview.md
eng/: OSArch.props  RuntimeIdentifier.props  Subsets.props  build.ps1  build.sh  versioning.targets
eng/common/cross/: build-rootfs.sh  toolchain.cmake  toolchain.freertos-windows.cmake
eng/common/native/: init-distro-rid.sh
eng/native/: configurecompiler.cmake  configureoptimization.cmake  configureplatform.cmake  gen-buildsys.cmd  tryrun.cmake
src/coreclr/: CMakeLists.txt  clrfeatures.cmake
src/coreclr/gc/env/: gcenv.structs.h
src/coreclr/minipal/: CMakeLists.txt
src/coreclr/nativeaot/BuildIntegration/: Microsoft.NETCore.Native.FreeRTOS.targets  Microsoft.NETCore.Native.targets
src/coreclr/nativeaot/Runtime/: CMakeLists.txt  Pal.h  eventtracebase.h  gcenv.h
src/coreclr/nativeaot/Runtime/Full/: CMakeLists.txt
src/coreclr/nativeaot/Runtime/freertos/: NativeContext.h  PalFreeRTOS.cpp  PalFreeRTOS.h  PalInline.h
src/coreclr/nativeaot/Runtime/inc/: CommonTypes.h
src/coreclr/pal/inc/rt/: palrt.h
src/coreclr/runtime/: CachedInterfaceDispatch.cpp
src/native/corehost/apphost/static/: CMakeLists.txt
src/native/eventpipe/: ds-ipc-pal-socket.h  ds-portable-rid.c
src/native/libs/: CMakeLists.txt
src/native/minipal/: cpufeatures.c  cpuid.h  guid.c  log.c  mutex.c  mutex.h  time.c
